44
================

31/12/20 Shelter view site mode #948
21/12/20 Fix #892 - bad disabled parameter to button
17/12/20 Temporarily roll back #892 due to unexpected side effects
17/12/20 Use case insensitive sort when regenerating person flags
16/12/20 Make "regenerate person flags" actually check and regenerate
15/12/20 Fix serious performance bug when selecting media #892
15/12/20 Do not allow media links to be emailed #892
14/12/20 Allow rabies tag to be cleared, update on delete #323
13/12/20 Update bg translation and correct date format
13/12/20 Suppress nulls when outputting subtable values in documents
13/12/20 Hide old rabies tag for new installs
12/12/20 Simple search includes historic rabies tag numbers
10/12/20 New icon for not neutered/spayed for clarity #749
10/12/20 Add an emblem and alert for no rabies vaccination #431
10/12/20 Move rabies tag to vaccination screens #323
09/12/20 Include exclude from bulk email in report criteria
09/12/20 Fix stock comments not being decoded in other languages
28/11/20 Fix waiting list/lost/found emails being sent as plain text
24/11/20 Include a link to Desktop/Tablet UI from smartphone #937
23/11/20 Add <<Signature>> wordkey since TinyMCE5 hides invalid images
22/11/20 Allow a blank in vaccination edit dialog/given by #930
20/11/20 PR and SOL: Stop no adoptables preventing cancellation #935
16/11/20 Include trial adoptions in timeline #764
12/11/20 Fix display of TNR and other special movements #933
12/11/20 Unredeemed voucher book view #934
12/11/20 strip csv values before imports
11/11/20 csvimport support to update weight and dob on existing
09/11/20 HomeAgain require city in a new TownCity tag
06/11/20 Add ActiveDiet fields to query builder
04/11/20 Include administering vet in medical table keys #779
02/11/20 Omit hidden conditional fields from form posts #931
02/11/20 Fix bug when calculating vacc reschedule dates
02/11/20 Add vaccination due to query builder