@@ -150,15 +150,15 @@ $.widget("asm.personchooser", {
             '</tr>',
             '<tr>',
             '<td><label>' + _("Home Phone") + '</label></td>',
-            '<td><input class="asm-textbox chooser" data="hometelephone" type="textbox" /></td>',
+            '<td><input class="asm-textbox asm-phone chooser" data="hometelephone" type="textbox" /></td>',
             '</tr>',
             '<tr>',
             '<td><label>' + _("Work Phone") + '</label></td>',
-            '<td><input class="asm-textbox chooser" data="worktelephone" type="textbox" /></td>',
+            '<td><input class="asm-textbox asm-phone chooser" data="worktelephone" type="textbox" /></td>',
             '</tr>',
             '<tr>',
             '<td><label>' + _("Cell Phone") + '</label></td>',
-            '<td><input class="asm-textbox chooser" data="mobiletelephone" type="textbox" /></td>',
+            '<td><input class="asm-textbox asm-phone chooser" data="mobiletelephone" type="textbox" /></td>',
             '</tr>',
             '<tr>',
             '<td><label>' + _("Email Address") + '</label></td>',
