@@ -63,15 +63,15 @@ $(function() {
                 '</tr>',
                 '<tr>',
                 '<td><label for="hometelephone">' + _("Home Phone") + '</label></td>',
-                '<td><input class="asm-textbox newform" id="hometelephone" data="hometelephone" type="textbox" /></td>',
+                '<td><input class="asm-textbox asm-phone newform" id="hometelephone" data="hometelephone" type="textbox" /></td>',
                 '</tr>',
                 '<tr>',
                 '<td><label for="worktelephone">' + _("Work Phone") + '</label></td>',
-                '<td><input class="asm-textbox newform" id="worktelephone" data="worktelephone" type="textbox" /></td>',
+                '<td><input class="asm-textbox asm-phone newform" id="worktelephone" data="worktelephone" type="textbox" /></td>',
                 '</tr>',
                 '<tr>',
                 '<td><label for="mobiletelephone">' + _("Cell Phone") + '</label></td>',
-                '<td><input class="asm-textbox newform" id="mobiletelephone" data="mobiletelephone" type="textbox" /></td>',
+                '<td><input class="asm-textbox asm-phone newform" id="mobiletelephone" data="mobiletelephone" type="textbox" /></td>',
                 '</tr>',
                 '<tr>',
                 '<td><label for="emailaddress">' + _("Email Address") + '</label></td>',
