@@ -1,6 +1,7 @@
 44
 ================
 
+31/12/20 Phone number formatting for US/UK/AU #499
 31/12/20 Shelter view site mode #948
 21/12/20 Fix #892 - bad disabled parameter to button
 17/12/20 Temporarily roll back #892 due to unexpected side effects
